# payment-fee-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .xenon.yml  BENCHMARK.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  refactor.md
.github/workflows/: ci.yml  docker.yml
contracts/: CALCULATION_SPEC.md  DATASET_ADAPTER_SPEC.md  ROUNDING_SPEC.md  RULE_MATCHING_SPEC.md  currencies.json  data-revisions.json  dataset-support.json
contracts/api/: capabilities-v1.schema.json  data-status-v1.schema.json  error-v1.schema.json  quote-request-v1.schema.json  quote-response-v1.schema.json
contracts/conformance/: manifest.json
contracts/conformance/cases/: paypal-international-surcharge-gb.json  paypal-international-surcharge-no-region.json  paypal-minimal-fixed.json  paypal-payment-method-condition.json  paypal-payment-method-selection.json  rounding-jpy-midpoint.json  stripe-de-bacs-direct-debit.json  stripe-de-bancontact.json  stripe-de-eps.json  stripe-de-ideal.json  stripe-de-klarna.json  stripe-de-pay-by-bank.json  stripe-de-sepa-direct-debit.json  stripe-gb-alipay.json  stripe-gb-bacs-direct-debit.json  stripe-gb-clearpay.json  stripe-gb-klarna.json  stripe-gb-pay-by-bank.json  stripe-gb-sepa-direct-debit.json  stripe-gb-wechat-pay.json  stripe-minimal-card-us.json  stripe-minimum-fee-us.json  stripe-us-ach-direct-debit.json  stripe-us-affirm.json  stripe-us-alipay.json  stripe-us-amazon-pay.json  stripe-us-apple-pay.json  stripe-us-bank-transfer-type.json  stripe-us-bank-transfer.json  stripe-us-boolean-strict-match.json  stripe-us-boolean-strict-numeric-fallback.json  stripe-us-boolean-strict-string-fallback.json  stripe-us-card-domestic.json  stripe-us-cash-app-afterpay.json  stripe-us-cash-app-pay.json  stripe-us-fee-type-dimension.json  stripe-us-google-pay.json  stripe-us-klarna.json  stripe-us-link.json  stripe-us-sepa-direct-debit.json  (+3 more)
docs/: ADDING_A_PROVIDER.md  CONFORMANCE.md  HTTP_API.md  IMPLEMENTATION_SPEC.md  LIBRARY_API.md  PAYPAL_SANDBOX_VALIDATION.md  PHP_LIBRARY.md  PYTHON_LIBRARY.md  RELEASING.md  TYPESCRIPT_LIBRARY.md
scripts/: benchmark_quote_hot_path.py  docker-smoke.sh
services/payment-fee-service/: README.md  pyproject.toml
services/payment-fee-service/src/payment_fee_service/: __init__.py  app.py  bootstrap.py  cli.py  engine_holder.py  errors.py  service.py  settings.py
services/payment-fee-service/src/payment_fee_service/api/: routes.py
services/payment-fee-service/src/payment_fee_service/data/: source.py
services/payment-fee-service/src/payment_fee_service/domain/: models.py
src/payment_fee_service/: __init__.py  app.py  bootstrap.py  cli.py  service.py  settings.py
src/payment_fee_service/api/: routes.py
src/payment_fee_service/data/: snapshots.py
src/payment_fee_service/domain/: calculator.py  errors.py  models.py  rules.py
src/payment_fee_service/providers/: __init__.py  base.py  registry.py
systemd/: config.json  payment-fee-service.service
tests/: conftest.py  test_api.py  test_calculator.py  test_contract_audit.py  test_loader_validation.py  test_paypal.py  test_paypal_adapter.py  test_paypal_sandbox_validation.py  test_paypal_sandbox_validation_au_diagnosis.py  test_paypal_sandbox_validation_de_diagnosis.py  test_paypal_sandbox_validation_diagnostics.py  test_paypal_sandbox_validation_docs.py  test_paypal_sandbox_validation_hardening.py  test_paypal_sandbox_validation_manual_formula.py  test_paypal_sandbox_validation_nvp.py  test_paypal_sandbox_validation_pilots.py  test_paypal_sandbox_validation_profile_pricing.py  test_paypal_sandbox_validation_qualification.py  test_paypal_sandbox_validation_reuse.py  test_paypal_sandbox_validation_targeting.py  test_paypal_schedule_resolution.py  test_settings.py  test_stripe.py  test_values_equal.py
tests/e2e/: conftest.py  test_service.py
tools/: audit_contract_runner.mjs  audit_contract_runner.php  audit_contract_runner.py  generate_currencies.py
tools/conformance/: Makefile  run_differential.py  run_php.php  run_python.py  run_typescript.mjs
tools/isolated-install/: test_php.sh  test_typescript.sh
tools/paypal-sandbox-validation/: README.md  pyproject.toml
tools/paypal-sandbox-validation/config/: account-schema.json  scenarios.yaml
tools/paypal-sandbox-validation/src/paypal_sandbox_validation/: __init__.py  accounts.py  approval.py  browser.py  browser_common.py  callback_server.py  capture.py  cli.py  configuration.py  diagnostics.py  error_classification.py  manual_browser.py  manual_flow.py  models.py  numeric.py  nvp.py  oauth.py  paypal_api.py  persistence.py  planner.py  profile_pricing.py  qualification.py  quote_adapter.py  reconciliation.py  redaction.py  reporting.py  url_validation.py
tools/paypal-sandbox-validation/src/paypal_sandbox_validation/cli/: __init__.py  diagnose.py  execution.py  manual.py  manual_approval.py  probing.py  profile_pricing.py  qualify.py  reconcile_report.py  runner.py  verify.py
(+12 files in other folders)
