[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "payment-fee-service"
version = "0.1.0"
description = "Provider-neutral REST service for estimating payment processing fees from versioned public fee datasets."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "smeinecke" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
payment-fee-service = "payment_fee_service.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "bandit>=1.7.9",
  "pre-commit>=3.7.0",
  "pyright>=1.1.370",
  "pytest-cov>=6,<7",
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-q",
  "--strict-markers",
  "--import-mode=importlib",
  "--cov=payment_fee_service",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live: tests that hit the live network",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", "tests", "docs"]
