[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "payment-fee-service"
version = "0.2.0"
description = "FastAPI service for estimating payment processing fees using payment-fee."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "smeinecke" }]
dependencies = [
  "payment-fee",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.uv.sources]
payment-fee = { workspace = true }

[project.scripts]
payment-fee-service = "payment_fee_service.cli:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-q",
  "--strict-markers",
  "--import-mode=importlib",
  "--cov=payment_fee_service",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live: tests that hit the live network",
  "e2e: tests that start a real HTTP server",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", "tests", "docs"]
