[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "paypal-sandbox-validation"
version = "0.1.0"
description = "PayPal Sandbox fee-reconciliation harness for the payment-fee service workspace."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "smeinecke" }]
dependencies = [
  "payment-fee",
  "click>=8,<9",
  "httpx>=0.27,<1",
  "playwright>=1.41,<2",
  "pydantic>=2.10,<3",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
paypal-sandbox-validation = "paypal_sandbox_validation.cli:main"

[tool.uv]
package = true

[tool.uv.sources]
payment-fee = { workspace = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-q",
  "--strict-markers",
  "--import-mode=importlib",
  "--cov=paypal_sandbox_validation",
  "--cov-report=term-missing",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live: tests that hit the real PayPal Sandbox",
  "playwright: tests that require Playwright",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/tests"]
pythonVersion = "3.12"
venvPath = "../.."
venv = ".venv"

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", "tests", "docs"]
